@@ -4,7 +4,7 @@ PROJECT(q4wine)
 
 SET(CMAKE_VERBOSE_MAKEFILE ON)
 
-SET(APP_VERSION "0.119-r2")
+SET(APP_VERSION "0.120")
 
 if(POLICY CMP0011)
   cmake_policy(SET CMP0011 NEW)
